--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -107,6 +107,7 @@ ul .header-tel{
   .menu-wrapper.is-open{
     display: block;
     transform: translateX(0);
+    z-index: 100;
   }
   
   .menu-btn {
